force-app/main/default/objects/Dependent_Question__c/Dependent_Question__c.object-meta.xml
<CustomObject>
    <label>Dependent Question</label>
    <nameField>
        <displayFormat>DQ-{00000}</displayFormat>
        <label>Dependent Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependent Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>