force-app/main/default/objects/Dependent_Question__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Dependent Questions</relationshipLabel>
    <relationshipName>Dependent_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>