force-app/main/default/objects/Dependent_Question__c/fields/Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Question</label>
    <referenceTo>Assessment_Question__c</referenceTo>
    <relationshipLabel>Dependent Questions (Dependent Question)</relationshipLabel>
    <relationshipName>Dependent_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>