force-app/main/default/objects/Dependent_Question__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>Assessment_Question__c</referenceTo>
    <relationshipLabel>Parent Questions</relationshipLabel>
    <relationshipName>Parent_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>