force-app/main/default/objects/Dependent_Question__c/fields/Question_Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>Question_Answer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Answer Option</label>
    <referenceTo>Question_Answer_Option__c</referenceTo>
    <relationshipLabel>Dependent Questions</relationshipLabel>
    <relationshipName>Dependent_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>