force-app/main/default/objects/Dependent_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Question__c</columns>
    <columns>Dependent_Question__c</columns>
    <columns>Question_Answer_Option__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>